--- a/frontend/userProfile/login.html
+++ b/frontend/userProfile/login.html
@@ -37,6 +37,7 @@
         .then(res=>{
             console.log(res);
             localStorage.setItem("token",res.token);
+            window.location.href="../product/allItem.html"
         })
         .catch(err=>console.log(err));
     })
