--- a/frontend/userProfile/signup.html
+++ b/frontend/userProfile/signup.html
@@ -44,7 +44,11 @@
             body:JSON.stringify(payload)
         })
         .then(res=>res.json())
-        .then(res=>console.log(res))
+        .then(res=>{
+            // console.log(res);
+            alert(res);
+            window.location.href="./login.html"
+        })
         .catch(err=>console.log(err));
     })
 </script>
